looked at demo code

--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,11 @@ div {
 }
 
 #headerLogo {
-    float: left;
+    /* float: left; */
     display: inline-block;
 }
 div #descriptionBox{
     text-align: center;
     width:700px;
 }
+
