--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,48 @@
+body{
+    width: 1100;
+}
+
 div {
     border: black 1px solid;
-    float: left;
+    /* float: left; */
     margin: 10;
     padding:10;
 }
 
 #results{
+    /* float: left; */
     display: inline-block;
     border: black 1px solid;
     height: 500px;
     width: 200px;
 }
 
-#rightside, #descriptionBox{
-    display: inline;
-}
-
 #headerLogo {
     /* float: left; */
     display: inline-block;
 }
-div #descriptionBox{
+div #descriptionBox, section{
     text-align: center;
-    width:700px;
+    width:720px;
+    display: inline-block;
 }
 
+/* #rightside img {
+    height: 250px;
+    width: 240px;
+} */
+
+div #img1, #img2, #img3 {
+    height:250px;
+    width: 240px;
+    display: inline-block;
+}
+
+div #rank{
+    height: 600px;
+    width: 200px;
+    display: inline-block;
+}
+h2{
+    text-align: center;
+}
