--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body{
 div {
     border: black 1px solid;
     /* float: left; */
+    display: inline-block;
+    width: 400px;
     margin: 10;
     padding:10;
 }
@@ -20,6 +22,7 @@ div {
 #headerLogo {
     /* float: left; */
     display: inline-block;
+    width: 50px;
 }
 div #descriptionBox, section{
     text-align: center;
